add components and logic
