# src/router/router.paths.ts
@@ -1,6 +1,7 @@
 export enum RouterPaths {
   Root = "/",
   Login = "/login",
-  SignUp = "/signUp",
+  SignUp = "/sign-up",
+  Notes = "/notes"
 }
 
