# src/swagger/api/index.ts
@@ -7,13 +7,18 @@ export { OpenAPI } from './core/OpenAPI';
 export type { OpenAPIConfig } from './core/OpenAPI';
 
 export type { CreateFolderDto } from './models/CreateFolderDto';
+export type { CreateNoteReqDto } from './models/CreateNoteReqDto';
 export type { FolderModel } from './models/FolderModel';
 export type { GetAllUserFoldersResDTO } from './models/GetAllUserFoldersResDTO';
+export type { GetFolderNotesResDTO } from './models/GetFolderNotesResDTO';
 export type { LoginReqDTO } from './models/LoginReqDTO';
 export type { LoginResDTO } from './models/LoginResDTO';
+export type { NoteModel } from './models/NoteModel';
 export type { SignupReqDTO } from './models/SignupReqDTO';
 export type { UpdateFolderDto } from './models/UpdateFolderDto';
+export type { UpdateNoteReqDto } from './models/UpdateNoteReqDto';
 export type { UserModel } from './models/UserModel';
 
 export { FoldersService } from './services/FoldersService';
+export { NotesService } from './services/NotesService';
 export { UserService } from './services/UserService';
