# src/swagger/api/models/CreateNoteReqDto.ts
@@ -1,0 +1,15 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type CreateNoteReqDto = {
+    folderId: string;
+    name: string;
+    content: string;
+    'x': number;
+    'y': number;
+    width: number;
+    height: number;
+    color: string;
+};
+
