# src/swagger/api/models/GetFolderNotesResDTO.ts
@@ -1,0 +1,10 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+import type { NoteModel } from './NoteModel';
+
+export type GetFolderNotesResDTO = {
+    notes: Array<NoteModel>;
+};
+
