# src/swagger/api/models/NoteModel.ts
@@ -1,0 +1,17 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type NoteModel = {
+    userId: string;
+    folderId: string;
+    id: string;
+    name: string;
+    content: string;
+    'x': number;
+    'y': number;
+    width: number;
+    height: number;
+    color: string;
+};
+
